# IncrementUpdateLearn

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/caiy/learn/increment/update/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/caiy/learn/increment/update/: MainActivity.java
app/src/main/java/com/caiy/learn/increment/update/util/: FileUtils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/caiy/learn/increment/update/: ExampleUnitTest.java
bsdiffpatch/: CMakeLists.txt  build.gradle
bsdiffpatch/src/androidTest/java/com/caiy/learn/increment/update/bsdiffpatch/: ExampleInstrumentedTest.java
bsdiffpatch/src/main/: AndroidManifest.xml
bsdiffpatch/src/main/cpp/: bsdiff.c  bspatch.c
bsdiffpatch/src/main/java/com/caiy/learn/increment/update/bsdiffpatch/: BsDiffPatchUtil.java
bsdiffpatch/src/test/java/com/caiy/learn/increment/update/bsdiffpatch/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
